gke-yru-openedx/deploy/prometheus/prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ing
  annotations: {}
spec:
  tls:
    - hosts:
      - prometheus-k8s.yru-openedx-prod.its-software-services.com
      secretName: prometheus-k8s-cert
  rules:
    - host: prometheus-k8s.yru-openedx-prod.its-software-services.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ing2
spec:
  defaultBackend:
    service:
      name: prometheus-k8s
      port:
        number: 9090
